--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "start": "nuxi start"
   },
   "dependencies": {
-    "nuxt3": "latest"
+    "autoprefixer": "10.4.0",
+    "@headlessui/vue": "^1.4.2",
+    "@heroicons/vue": "1.0.5",
+    "@pinia/nuxt": "0.1.5",
+    "@tailwindcss/aspect-ratio": "0.3.0",
+    "@tailwindcss/forms": "0.4.0-alpha.1",
+    "@tailwindcss/line-clamp": "0.2.2",
+    "@tailwindcss/typography": "0.5.0-alpha.2",
+    "pinia": "2.0.3"
   },
   "devDependencies": {
-
+    "autoprefixer": "10.4.0",
+    "nuxt3": "latest",
+    "postcss": "8.3.11",
+    "sass": "1.43.4",
+    "sass-loader": "12.3.0",
+    "tailwindcss": "3.0.0-alpha.1"
   }
 }
